Add cases when e ajustes de layout

--- a/apps/core/templates/tendencias/cidade.html
+++ b/apps/core/templates/tendencias/cidade.html
@@ -11,6 +11,16 @@
             <div class="col-lg-7 col-12 px-5">
                 <div class="grafico" id="jatai-tendencias"></div>
             </div>
+            <div class="col-7 col-12-narrower" style="margin-left: 5%">
+                <div class="col-1-mobile" style="height: 90%; width: 110%; min-height: 300px;
+                    min-width: 300px; 
+                    max-width: 110%;
+                    max-height: 90%;" 
+                    id="{{ nome_base }}-tendencias"></div>
+                
+                    
+                
+            </div>
         </div>
         <div class="row pt-2 pt-lg-0">
             <span>
