--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -11,17 +11,23 @@
 	>
 		
 		{% include "partials/base/navbar.html" %}
-
 		<div class="container pt-4">
-  			<div class="row">
-    			<div class="col-lg col-sm"></div>
+			<div class="row">
+				<div class="col-lg col-sm"></div>
+			  	{% if grupo == "geral" %}
+					<div class="col-lg-8 col-sm-10">
+				{% elif grupo == "graficos" %}
+					<div class="col-lg-12 col-sm-12 col-md-10">
+				{% else %}
+					  <div class="col-lg-12 col-sm-12 col-md-12">
+			  	{% endif %} 
 					{% block content %}
-						{% include 'index.html' %}
-                    {% endblock %}
-    			</div>
-			    <div class="col-lg col-sm"></div>
-  			</div>
-		</div>
+				  		{% include 'index.html' %}
+					{% endblock %}
+			</div>
+			  <div class="col-lg col-sm"></div>
+			</div>
+		  </div>
 
 		{% block script %}
 		
