--- a/apps/core/templates/grafico/buildChart.html
+++ b/apps/core/templates/grafico/buildChart.html
@@ -137,11 +137,11 @@
     dados.rioverde.populacao = 235647; //População estimada: https://www.rioverde.go.gov.br/historia-cidade/
 
     dados.goias = {};
-    dados.goias.casos = {{ goias }}; //diego
+    dados.goias.casos = {{ goias }}; //obtem dados do backend
     dados.goias.populacao = 6003788; //População estimada: https://cidades.ibge.gov.br/brasil/go/panorama
 
     dados.brasil = {};
-    dados.brasil.casos = {{ brasil }}; //diego
+    dados.brasil.casos = {{ brasil }}; // obtem dados do backend
     dados.brasil.populacao = 210147125; //População estimada: https://cidades.ibge.gov.br/brasil/panorama
 
 
