--- a/apps/core/templates/tendencias/cidade.html
+++ b/apps/core/templates/tendencias/cidade.html
@@ -8,18 +8,15 @@
             <div class="col-lg-5 col-12">
                 <img src="{% static 'images/mapa-'%}{{nome_base}}.svg" id="mapa-{{ nome_base }}" alt="Mapa da Cidade de {{ cidade }}"  style="width: 120%;" />
             </div>
-            <div class="col-lg-7 col-12 px-5">
+            <!-- <div class="col-lg-7 col-12 px-5">
                 <div class="grafico" id="jatai-tendencias"></div>
-            </div>
-            <div class="col-7 col-12-narrower" style="margin-left: 5%">
+            </div> -->
+            <div class="col-lg-7 col-12 px-5">
                 <div class="col-1-mobile" style="height: 90%; width: 110%; min-height: 300px;
                     min-width: 300px; 
                     max-width: 110%;
                     max-height: 90%;" 
                     id="{{ nome_base }}-tendencias"></div>
-                
-                    
-                
             </div>
         </div>
         <div class="row pt-2 pt-lg-0">
