--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,8 +7,8 @@
 }
 
 .graficos-bg{
-	background-color: rgb(0,0,0,0.7);
-	color: white;
+	background-color: rgb(0,0,0,0.7)!important;
+	color: white !important;
 }
 
 .grafico{
