--- a/apps/core/templates/grafico/comparacao.html
+++ b/apps/core/templates/grafico/comparacao.html
@@ -13,7 +13,7 @@
 		</div>
 		<div class="row pt-2 pt-lg-0">
 			<span>
-				Dados atualizados em <span id="data-atualizacao-{{ nome_base }}">23 de abril de 2020</span>.<br>
+				Dados atualizados em <span id="data-atualizacao-{{ nome_base }}">10 de maio de 2020</span>.<br>
 				<strong>Fonte:</strong> IBGE, Ministério da Saúde e Secretarias Municipais.
 			</span>
 		</div>
