Reportagem na TV Sudoeste

--- a/apps/core/templates/saiba_mais/na-midia.html
+++ b/apps/core/templates/saiba_mais/na-midia.html
@@ -5,10 +5,17 @@
         <h1 class="pb-4">Na Mídia</h1>
 
         <p class="lead">
-            O Observatório UFJ Covid-19 tem sido destaques em alguns meios de comunicação. Sempre que temos ciência de alguma nota na mídia, publicamos aqui para você poder conferir.
+            O Observatório UFJ Covid-19 tem sido destaque em alguns meios de comunicação. Sempre que temos ciência de alguma nota na mídia, publicamos aqui para você poder conferir.
         </p>
 
         <div class="list-group">
+            <a class="list-group-item list-group-item-action" 
+            href="https://www.facebook.com/watch/?v=2500464746872510" target="_blank">
+            <h3>
+                <span class="badge badge-primary">TV Sudoeste</span> - 11/05/2020
+            </h3>
+            Projeto de extensão da UFJ traz informações atualizadas sobre casos de coronavírus
+            </a>
             <a class="list-group-item list-group-item-action" 
             href="https://www.facebook.com/centrouniversitariodemineiros/videos/540776539966212/" target="_blank">
             <h3>
