--- a/templates/partials/base/head.html
+++ b/templates/partials/base/head.html
@@ -39,6 +39,10 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="96x96" href="{% static 'images/favicon/favicon-96x96.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon/favicon-16x16.png' %}">
+
+    <link rel="stylesheet" href="{% static 'plugins/sim/css/sim.css' %}" />
+    <link rel="stylesheet" href="{% static 'plugins/sim/css/simplebar.css' %}" />
+
     <link rel="manifest" href="{%  static '/images/favicon/manifest.json' %}">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png' %}">
