--- a/templates/partials/base/scripts.html
+++ b/templates/partials/base/scripts.html
@@ -17,8 +17,7 @@
   
 {% if script == "graficos-jatai" %}
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-  {% include "grafico/buildChart.html" %}
-  <script src="{% static 'js/graficos/jatai.js' %}"></script>
+  {% include "grafico/buildChartJatai.html" %}
 {% endif %}
 
 {% if  script == "graficos-mineiros" %}
