--- a/templates/partials/base/navbar.html
+++ b/templates/partials/base/navbar.html
@@ -25,9 +25,10 @@
 		        	Gráficos
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdownGraficos">
-		        	<a class="dropdown-item" href="{% url 'core:grafico' cidade="jatai" %}">Jataí</a>
+					<a class="dropdown-item" href="{% url 'core:grafico' cidade="chapadao" %}">Chapadão do Céu</a>
+					<a class="dropdown-item" href="{% url 'core:grafico' cidade="jatai" %}">Jataí</a>
 		          	<a class="dropdown-item" href="{% url 'core:grafico' cidade="mineiros" %}">Mineiros</a>
-		          	<a class="dropdown-item" href="{% url 'core:grafico' cidade="rioverde" %}">Rio Verde</a>
+					<a class="dropdown-item" href="{% url 'core:grafico' cidade="rioverde" %}">Rio Verde</a>
 					<div class="dropdown-divider"></div>
 					<a class="dropdown-item" href="{% url 'core:comparacao' %}">Comparação Contextual</a>
 		          	<a class="dropdown-item" href="{% url 'core:como-sao-criados' %}">Como são criados?</a>
