--- a/apps/core/templates/grafico/comparacao.html
+++ b/apps/core/templates/grafico/comparacao.html
@@ -5,7 +5,7 @@
 		<h1>Comparação Contextual</h1>
 		<div class="row">
 			<div class="col-lg-5 col-12">
-				<img src="{% static 'images/mapa-comparacao.svg' %}" id="mapa-comparacao" alt="Mapa do Sudoeste Goiano"  style="width: 120%;" />
+				<img src="{% static 'images/mapas/comparacao.svg' %}" id="mapa-comparacao" alt="Mapa do Sudoeste Goiano"  style="width: 120%;" />
 			</div>
 			<div class="col-lg-7 col-12 px-5">
 				<div class="grafico" id="comparacao-grafico" v_goias="{{ goias }}" v_brasil="{{ brasil }}"></div>
