--- a/static/plugins/sim/css/sim.css
+++ b/static/plugins/sim/css/sim.css
@@ -223,16 +223,16 @@ icon{
 	background-size: 100% 100%;
 }
 icon[s]{
-	background-image: url(../../icons/s.png);
+	background-image: url(../icons/s.png);
 }
 icon[e]{
-	background-image: url(../../icons/e.png);
+	background-image: url(../icons/e.png);
 }
 icon[i]{
-	background-image: url(../../icons/i.png);
+	background-image: url(../icons/i.png);
 }
 icon[r]{
-	background-image: url(../../icons/r.png);
+	background-image: url(../icons/r.png);
 }
 
 #legend{
@@ -266,7 +266,7 @@ icon[r]{
 }
 #hand{
 	position: absolute;
-	background: url(../../icons/hand.png);
+	background: url(../icons/hand.png);
 	background-size: 100% 100%;
 	width:80px; height:80px;
 
@@ -297,7 +297,7 @@ icon[r]{
 .control_icon{
 	width:36px;
 	height:36px;
-	background: url(../../icons/controls.png);
+	background: url(../icons/controls.png);
 	background-size: auto 100%;
 	display: inline-block;
 
