--- a/apps/core/templates/tendencias/cidade.html
+++ b/apps/core/templates/tendencias/cidade.html
@@ -6,7 +6,7 @@
         <h1>Tendência dos Confirmados: <strong>{{ cidade }}</strong></h1>
         <div class="row">
             <div class="col-lg-5 col-12">
-                <img src="{% static 'images/mapa-'%}{{nome_base}}.svg" id="mapa-{{ nome_base }}" alt="Mapa da Cidade de {{ cidade }}"  style="width: 120%;" />
+                <img src="{% static 'images/mapas/'%}{{nome_base}}.svg" id="mapa-{{ nome_base }}" alt="Mapa da Cidade de {{ cidade }}"  style="width: 120%;" />
             </div>
             <!-- <div class="col-lg-7 col-12 px-5">
                 <div class="grafico" id="jatai-tendencias"></div>
