--- a/templates/partials/base/scripts.html
+++ b/templates/partials/base/scripts.html
@@ -15,7 +15,7 @@
   crossorigin="anonymous">
 </script>
 
-{% if script == "graficos-chapadao" %}
+{% if script == "graficos-chapadao-do-ceu" %}
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   {% include "grafico/buildChart.html" %}
 {% endif %}
@@ -30,7 +30,7 @@
   {% include "grafico/buildChart.html" %}
 {% endif %}
 
-{% if script == "graficos-rioverde" %}
+{% if script == "graficos-rio-verde" %}
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   {% include "grafico/buildChart.html" %}
 {% endif %}
