--- a/apps/core/templates/grafico/buildChart.html
+++ b/apps/core/templates/grafico/buildChart.html
@@ -16,75 +16,40 @@
     function buildChart(param) {
 
         var tableJson = '';
+        var ticks = '';
 
         switch(param.tipo_grafico){
             case "resumo":
                 tableJson = '{{ tableJson.resumo }}';
+                ticks = '{{ ticks.resumo }}';
                 break;
             case "monitorados":
                 tableJson = '{{ tableJson.monitorados }}';
+                ticks = '{{ ticks.monitorados }}';
                 break;
             case "todas":
                 tableJson = '{{ tableJson.todas }}';
+                ticks = '{{ ticks.todas }}';
                 break;
         }
         
         tableJson = decodeURI(tableJson);
-        tableJson = String(tableJson).replace(/&quot;/g, '"').replace(/&amp;/g, '&');
+        tableJson = String(tableJson)
+                    .replace(/&quot;/g, '"')
+                    .replace(/&amp;/g, '&');
         tableJson = JSON.parse(tableJson);
-
+        
         var data = new google.visualization.DataTable(tableJson);
 
-        //Criação do ticks X
-        var minX = data.getColumnRange(0).min;
-        var maxX = data.getColumnRange(0).max;
-
-        //Converte em dias
-        var minXDias = Math.ceil(minX / (1000 * 60 * 60 * 24));
-        var maxXDias = Math.ceil(maxX / (1000 * 60 * 60 * 24));
-        var diffDias = maxXDias-minXDias;
-
-        var ticksX = [];
-        var stepX = Math.ceil(diffDias/5);
-        var offsetX = diffDias%stepX;
-
-        if(offsetX > 0){
-        var val = minX * (1000 * 60 * 60 * 24);
-        val = new Date(val);
-        ticksX.push(minX);
-        }
-
-        for(var i=minXDias+offsetX; i <=maxXDias; i += stepX){
-            var val = i * (1000 * 60 * 60 * 24);
-            val = new Date(val);
-            ticksX.push(val);
-        }
-
-        //Criação do ticks Y
-        var minY = 0;
-
-        var maxY = -1;
-        for(var i=1; i<=data.getNumberOfColumns()-1; i++){
-            maxY = Math.max(data.getColumnRange(i).max, maxY);
-        }
-
-        var ticksY = [];
-        var stepY = Math.ceil((maxY-minY)/5);
-
-        var stepGold = [1, 5, 10, 20, 50, 100, 200, 500];
-        for(var i=0; i<stepGold.length; i++){
-            if(stepY <= stepGold[i]){
-                stepY = stepGold[i];
-                break;
-            }
-        }
-
-        var lastValue = 0;
-        for(var i=minY; i <maxY; i += stepY){
-            ticksY.push(i);
-            lastValue = i;
-        }
-        ticksY.push(lastValue + stepY);
+        ticks = decodeURI(ticks);
+        ticks = String(ticks)
+                    .replace(/&quot;/g, '"')
+                    .replace(/&amp;/g, '&');
+        ticks = JSON.parse(ticks);
+        
+        
+        var ticksX = ticks.ticksX;
+        var ticksY = ticks.ticksY;
 
         //Option
 
@@ -107,10 +72,9 @@
             },
             vAxis: {    
                 title: param.yTitle,
-                viewWindow: { min: minY },
-                //ticks: ticksY 
-                gridlines: {count: 5}
-                }
+                ticks: ticksY,
+                viewWindow: { min: param.minY }
+            }
             
         };
 
@@ -120,13 +84,8 @@
 
         //Data de atualização informada em cada página
         if(param.data_atualizacao != false){
-            var mes = [
-                "janeiro", "fevereiro", "março", 
-                "abril", "maio", "junho", 
-                "julho", "agosto", "setembro", 
-                "outubro", "novembro", "dezembro"];
-
-            $(param.data_atualizacao).text(maxX.getDate() + " de " + mes[maxX.getMonth()] + " de " + maxX.getFullYear());
+            var data_completa = '{{ data_completa }}';
+            $(param.data_atualizacao).text(data_completa);
         }
     }
 </script>
