Inclusão Mídia INPI

--- a/apps/core/templates/saiba_mais/na-midia.html
+++ b/apps/core/templates/saiba_mais/na-midia.html
@@ -10,6 +10,15 @@
 
         <div class="list-group">
             <a class="list-group-item list-group-item-action" 
+            href="https://www.gov.br/inpi/pt-br/servicos/patentes/tecnologias-para-covid-19/Computador_COVID" target="_blank">
+            <h3>
+                <span class="badge badge-primary">
+                    Ministério da Economia - INPI
+                </span> - 05/06/2020
+            </h3>
+            Programa de Computador COVID: Observatório de Tecnologias relacionadas à Covid-19
+            </a>
+            <a class="list-group-item list-group-item-action" 
             href="https://www.facebook.com/watch/?v=2500464746872510" target="_blank">
             <h3>
                 <span class="badge badge-primary">TV Sudoeste</span> - 11/05/2020
