--- a/templates/partials/base/navbar.html
+++ b/templates/partials/base/navbar.html
@@ -29,6 +29,7 @@
 					<a class="dropdown-item" href="{% url 'core:grafico' cidade="jatai" %}">Jataí</a>
 		          	<a class="dropdown-item" href="{% url 'core:grafico' cidade="mineiros" %}">Mineiros</a>
 					<a class="dropdown-item" href="{% url 'core:grafico' cidade="rioverde" %}">Rio Verde</a>
+					<a class="dropdown-item" href="{% url 'core:grafico' cidade="santahelena" %}">Santa Helena</a>
 					<div class="dropdown-divider"></div>
 					<!--
 						<a class="dropdown-item" href="{% url 'core:comparacao' %}">Comparação Contextual</a>
