Inclusão de Santa Helena no rodapé
e remoção do script do grupo geral

--- a/templates/partials/base/footer.html
+++ b/templates/partials/base/footer.html
@@ -71,6 +71,9 @@
           <li>
             <a href="{% url 'core:grafico' cidade="rioverde" %}">Rio Verde</a>
           </li>
+          <li>
+            <a href="{% url 'core:grafico' cidade="santahelena" %}">Santa Helena</a>
+          </li>
         </ul>
 
       </div>
