Inclusão de Caçu

--- a/templates/partials/base/footer.html
+++ b/templates/partials/base/footer.html
@@ -60,6 +60,9 @@
 
         <ul class="list-unstyled">
           <li>
+            <a href="{% url 'core:grafico' cidade="cacu" %}">Caçu</a>
+          </li>
+          <li>
             <a href="{% url 'core:grafico' cidade="chapadao" %}">Chapadão do Céu</a>
           </li>
           <li>
