--- a/templates/partials/base/navbar.html
+++ b/templates/partials/base/navbar.html
@@ -25,6 +25,7 @@
 		        	Gráficos
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdownGraficos">
+					<a class="dropdown-item" href="{% url 'core:grafico' cidade="cacu" %}">Caçu</a>
 					<a class="dropdown-item" href="{% url 'core:grafico' cidade="chapadao" %}">Chapadão do Céu</a>
 					<a class="dropdown-item" href="{% url 'core:grafico' cidade="jatai" %}">Jataí</a>
 		          	<a class="dropdown-item" href="{% url 'core:grafico' cidade="mineiros" %}">Mineiros</a>
