--- a/templates/partials/base/scripts.html
+++ b/templates/partials/base/scripts.html
@@ -15,6 +15,11 @@
   crossorigin="anonymous">
 </script>
 
+{% if script == "graficos-cacu" %}
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  {% include "grafico/buildChart.html" %}
+{% endif %}
+
 {% if script == "graficos-chapadao-do-ceu" %}
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   {% include "grafico/buildChart.html" %}
