chore: adicionado o metodo drawChart no evento onresize, deste modo ao mudar o tamanho da tela, o grafico ira acompanhar

--- a/apps/core/templates/grafico/buildChart.html
+++ b/apps/core/templates/grafico/buildChart.html
@@ -88,4 +88,7 @@
             $(param.data_atualizacao).text(data_completa);
         }
     }
+
+    window.onload = drawChart;
+    window.onresize = drawChart;
 </script>
