--- a/templates/partials/base/head.html
+++ b/templates/partials/base/head.html
@@ -22,7 +22,7 @@
     
     <link rel="stylesheet" href="{% static 'css/bootstrap-cosmo.css' %} " />		
     <link rel="stylesheet" href="{% static 'css/fontawesome-5.13.0-all.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/main_1.0.css' %}" />
 
     
 
