Incluindo Montividiu nos Gráficos

--- a/templates/partials/base/footer.html
+++ b/templates/partials/base/footer.html
@@ -72,6 +72,9 @@
             <a href="{% url 'core:grafico' cidade="mineiros" %}">Mineiros</a>
           </li>
           <li>
+            <a href="{% url 'core:grafico' cidade="montividiu" %}">Montividiu</a>
+          </li>
+          <li>
             <a href="{% url 'core:grafico' cidade="rioverde" %}">Rio Verde</a>
           </li>
           <li>
