--- a/templates/partials/base/scripts.html
+++ b/templates/partials/base/scripts.html
@@ -30,6 +30,11 @@
   {% include "grafico/buildChart.html" %}
 {% endif %}
 
+{% if script == "graficos-montividiu" %}
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  {% include "grafico/buildChart.html" %}
+{% endif %}
+
 {% if  script == "graficos-mineiros" %}
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   {% include "grafico/buildChart.html" %}
