--- a/templates/partials/base/navbar.html
+++ b/templates/partials/base/navbar.html
@@ -28,7 +28,8 @@
 					<a class="dropdown-item" href="{% url 'core:grafico' cidade="cacu" %}">Caçu</a>
 					<a class="dropdown-item" href="{% url 'core:grafico' cidade="chapadao" %}">Chapadão do Céu</a>
 					<a class="dropdown-item" href="{% url 'core:grafico' cidade="jatai" %}">Jataí</a>
-		          	<a class="dropdown-item" href="{% url 'core:grafico' cidade="mineiros" %}">Mineiros</a>
+					<a class="dropdown-item" href="{% url 'core:grafico' cidade="mineiros" %}">Mineiros</a>
+					<a class="dropdown-item" href="{% url 'core:grafico' cidade="montividiu" %}">Montividiu</a>
 					<a class="dropdown-item" href="{% url 'core:grafico' cidade="rioverde" %}">Rio Verde</a>
 					<a class="dropdown-item" href="{% url 'core:grafico' cidade="santahelena" %}">Santa Helena</a>
 					<div class="dropdown-divider"></div>
