--- a/templates/partials/grafico/grafico-completo.html
+++ b/templates/partials/grafico/grafico-completo.html
@@ -8,9 +8,7 @@
 				alt="Mapa da Cidade de {{  cidade }}"  
 				style="width: 100%;" 
 			>
-				{% with "mapas/"|add:nome_base|add:".svg" as nome_completo_mapa %}
-					{% include nome_completo_mapa %}
-				{% endwith %}
+				{% include "mapas/sudoeste.svg" %}
 			</div>
 		</div>
 		<div class="col-lg-7 col-12">
